@startuml

title __SCREEN2's Class Diagram__\n

  namespace com.projects.Screen2 {
    class com.projects.Screen2.DailyCalcFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - mParam1 : String
        - mParam2 : String
        + DailyCalcFragment()
        {static} + newInstance()
        + onCreate()
        + onCreateView()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.FoodFragment {
        + onCreateView()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.FoodRecyclerItem {
        - imageResource : int
        + FoodRecyclerItem()
        + getFoodItem()
        + getImageResource()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.HomeScreen {
        - drawer : DrawerLayout
        + onBackPressed()
        + onNavigationItemSelected()
        # onCreate()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.MenuFragment {
        {static} - ARG_PARAM1 : String
        {static} - ARG_PARAM2 : String
        - adapter : Adapter
        - layoutManager : LayoutManager
        - mParam1 : String
        - mParam2 : String
        - menuItems : ArrayList<FoodItem>[]
        - recyclerView : RecyclerView
        + MenuFragment()
        + manageMenuLoading()
        {static} + newInstance()
        + onClick()
        + onCreate()
        + onCreateView()
        + onViewCreated()
        - filter()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.MydataFragment {
        + onCreateView()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.SectionsPagerAdapter {
        {static} - TAB_TITLES : int[]
        - mContext : Context
        + SectionsPagerAdapter()
        + getCount()
        + getItem()
        + getPageTitle()
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.SportFragment {
        + onCreateView()
    }
  }
  

  com.projects.Screen2.DailyCalcFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.FoodFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.FoodRecyclerItem o-- com.projects.DataManagement.FoodItem : foodItem
  com.projects.Screen2.HomeScreen .up.|> com.google.android.material.navigation.NavigationView.OnNavigationItemSelectedListener
  com.projects.Screen2.HomeScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.projects.Screen2.MenuFragment .up.|> android.view.View.OnClickListener
  com.projects.Screen2.MenuFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.MenuFragment o-- com.projects.DataManagement.MenuHelperDB : helperDB
  com.projects.Screen2.MydataFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.SectionsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.projects.Screen2.SportFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
